analytics endpoint added
